<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>health.medunited</groupId>
  <artifactId>connector-admin</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>

  <properties>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
    <olingo.version>2.0.11</olingo.version>
    <failOnMissingWebXml>false</failOnMissingWebXml>
  </properties>
  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>7.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api-annotation</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.5.1</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.10.19</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>blueprint</finalName>
    <plugins>
      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>2.1.0.Beta1</version>
        <configuration>
          <java-opts>
            <java-opt>--add-opens=java.base/java.lang=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.io=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.security=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.management/javax.management=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</java-opt>
          </java-opts>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
